log/build_2020-07-16_10-57-43/keyboard_control2/stdout_stderr.log
running egg_info
writing /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/PKG-INFO
writing dependency_links to /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/dependency_links.txt
writing entry points to /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/entry_points.txt
writing requirements to /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/requires.txt
writing top-level names to /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/top_level.txt
reading manifest file '/home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/SOURCES.txt'
writing manifest file '/home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info/SOURCES.txt'
running build
running build_py
copying keyboard_control2/keyboard_input_alt2.py -> /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/build/lib/keyboard_control2
copying keyboard_control2/keyboard_input3.py -> /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/build/lib/keyboard_control2
running install
running install_lib
copying /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/build/lib/keyboard_control2/keyboard_input_alt2.py -> /home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2
copying /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/build/lib/keyboard_control2/keyboard_input3.py -> /home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2
byte-compiling /home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2/keyboard_input_alt2.py to keyboard_input_alt2.cpython-38.pyc
byte-compiling /home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2/keyboard_input3.py to keyboard_input3.cpython-38.pyc
  File "/home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2/keyboard_input3.py", line 30
    global publisher = node.create_publisher(Twist, 'cmd_vel', 10)
                     ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2-1.0.0-py3.8.egg-info' (and everything under it)
Copying /home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/keyboard_control2.egg-info to /home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2-1.0.0-py3.8.egg-info
running install_scripts
Installing keyboard_input3 script to /home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/keyboard_control2
writing list of installed files to '/home/jordan/ros2_dev_ws/src/keyboard_control2/build/keyboard_control2/install.log'
